--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,13 +24,16 @@ jobs:
           using Franklin;
 
           optimize()'
+      - uses: actions/upload-pages-artifact@main
+        with:
+          path: __site
       
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - uses: JamesIves/github-pages-deploy-action@releases/v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          branch: gh-pages
-          folder: __site
+      - id: deployment
+        uses: actions/deploy-pages@main
