--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,13 +22,11 @@ jobs:
       - uses: actions/checkout@main
       - uses: actions/setup-python@main
       - uses: julia-actions/setup-julia@master
+      - uses: julia-actions/cache@main
       - run: julia -e '
           using Pkg;
           Pkg.activate(".");
           Pkg.instantiate();
-
-          using NodeJS;
-          run(`$(npm_cmd()) install highlight.js`);
 
           using Franklin;
 
